--- a/src/main/resources/templates/members/form.html
+++ b/src/main/resources/templates/members/form.html
@@ -1,72 +1,46 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="don">
-  <title>회원가입</title>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/layout/layout}">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="/css/search-bar.css" rel="stylesheet">
-</head>
-
-<th:block layout:fragment="script">
-
-  <script th:inline="javascript">
-        $(document).ready(function(){
-            var errorMessage = [[${errorMessage}]];
-            if(errorMessage != null){
-                alert(errorMessage);
-            }
-        });
-    </script>
-
+<th:block layout:fragment="content">
+  <div class="container-fluid">
+    <div class="card shadow mb-4">
+      <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">회원가입</h6>
+      </div>
+      <div class="card-body">
+        <div class="table-responsive">
+          <form action="/members/new" role="form" method="post"  th:object="${memberFormDto}">
+            <div class="form-group">
+              <label th:for="memberName">아이디</label>
+              <input type="text" th:field="*{memberName}" class="form-control" placeholder="아이디를 입력해주세요">
+              <p th:if="${#fields.hasErrors('memberName')}" th:errors="*{memberName}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+              <label th:for="password">비밀번호</label>
+              <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력해주세요">
+              <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+              <label th:for="email">이메일</label>
+              <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력해주세요">
+              <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+              <label th:for="nickname">닉네임</label>
+              <input type="text" th:field="*{nickname}" class="form-control" placeholder="닉네임을 입력해주세요">
+              <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect data</p>
+            </div>
+            <div style="text-align: center">
+              <button type="submit" class="btn btn-primary" style="">Submit</button>
+            </div>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </th:block>
 
-<body>
-
-<header th:replace="header :: header"></header>
-
-<main class="container">
-
-  <div class="container">
-
-    <form action="/members/new" role="form" method="post"  th:object="${memberFormDto}">
-      <div class="form-group">
-        <label th:for="memberName">아이디</label>
-        <input type="text" th:field="*{memberName}" class="form-control" placeholder="아이디를 입력해주세요">
-        <p th:if="${#fields.hasErrors('memberName')}" th:errors="*{memberName}" class="fieldError">Incorrect data</p>
-      </div>
-      <div class="form-group">
-        <label th:for="password">비밀번호</label>
-        <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력해주세요">
-        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
-      </div>
-      <div class="form-group">
-        <label th:for="email">이메일</label>
-        <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력해주세요">
-        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
-      </div>
-      <div class="form-group">
-        <label th:for="nickname">닉네임</label>
-        <input type="text" th:field="*{nickname}" class="form-control" placeholder="닉네임을 입력해주세요">
-        <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect data</p>
-      </div>
-      <div style="text-align: center">
-        <button type="submit" class="btn btn-primary" style="">Submit</button>
-      </div>
-      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-    </form>
-
-  </div>
-
-  </div>
-</main>
-
-<footer th:replace="footer :: footer"></footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
 </html>
