--- a/src/main/resources/templates/members/login.html
+++ b/src/main/resources/templates/members/login.html
@@ -1,46 +1,34 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="don">
-    <title>로그인</title>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/layout/layout}">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="/css/search-bar.css" rel="stylesheet">
-</head>
-
-<body>
-
-<header th:replace="header :: header"></header>
-
-<main class="container">
-
-    <div class="container">
-
-        <form role="form" method="post" action="/members/login">
-            <div class="form-group">
-                <label th:for="memberName">아이디</label>
-                <input type="text" name="memberName" class="form-control" placeholder="아이디를 입력해주세요">
+<th:block layout:fragment="content">
+    <div class="container-fluid">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">로그인</h6>
             </div>
-            <div class="form-group">
-                <label th:for="password">비밀번호</label>
-                <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요">
+            <div class="card-body">
+                <div class="table-responsive">
+                    <form action="/members/login" role="form" method="post">
+                        <div class="form-group">
+                            <label th:for="memberName">아이디</label>
+                            <input type="text" name="memberName" class="form-control" placeholder="아이디를 입력해주세요">
+                        </div>
+                        <div class="form-group">
+                            <label th:for="password">비밀번호</label>
+                            <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요">
+                        </div>
+                        <h6 th:if="${loginErrorMessage}" class="m-0 font-weight-bold text-primary" th:text="${loginErrorMessage}">로그인</h6>
+                        <button class="btn btn-primary">로그인</button>
+                        <button type="button" class="btn btn-primary" onClick="location.href='/members/new'">회원가입</button>
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                    </form>
+                </div>
             </div>
-            <p th:if="${loginErrorMessage}" class="error" th:text="${loginErrorMessage}"></p>
-            <button class="btn btn-primary">로그인</button>
-            <button type="button" class="btn btn-primary" onClick="location.href='/members/new'">회원가입</button>
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-        </form>
-
+        </div>
     </div>
+</th:block>
 
-    </div>
-</main>
-
-<footer th:replace="footer :: footer"></footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
 </html>
