--- a/src/main/resources/templates/posts/form.html
+++ b/src/main/resources/templates/posts/form.html
@@ -1,72 +1,58 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="don">
-    <title>게시글 등록</title>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/layout/layout}">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="/css/search-bar.css" rel="stylesheet">
-</head>
+<th:block layout:fragment="content">
+    <div class="container-fluid">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">게시글 등록</h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <form role="form" method="post" th:object="${postFormDto}">
 
-<body>
+                        <input type="hidden" th:field="*{id}">
 
-<header th:replace="header :: header"></header>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">제목</span>
+                            </div>
+                            <input type="text" th:field="*{title}" class="form-control" placeholder="제목을 입력해주세요">
+                        </div>
+                        <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="fieldError">Incorrect data</p>
 
-<main class="container">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">내용</span>
+                            </div>
+                            <textarea class="form-control" aria-label="With textarea" th:field="*{content}" placeholder="내용을 입력해주세요"></textarea>
+                        </div>
+                        <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="fieldError">Incorrect data</p>
 
-    <div class="container">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">해시태그</span>
+                            </div>
+                            <input type="text" th:field="*{hashtag}" class="form-control" placeholder="해시태그를 입력해주세요">
+                        </div>
 
-        <form role="form" method="post" th:object="${postFormDto}">
+                        <br/>
 
-            <p class="h2">
-                게시글 등록
-            </p>
+                        <div th:if="${#strings.isEmpty(postFormDto.id)}" style="text-align: center">
+                            <button th:formaction="@{/posts/new}" type="submit" class="btn btn-primary">저장</button>
+                        </div>
+                        <div th:unless="${#strings.isEmpty(postFormDto.id)}" style="text-align: center">
+                            <button th:formaction="@{'/posts/' + ${postFormDto.id} }" type="submit" class="btn btn-primary">수정</button>
+                        </div>
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 
-            <input type="hidden" th:field="*{id}">
-
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">제목</span>
+                    </form>
                 </div>
-                <input type="text" th:field="*{title}" class="form-control" placeholder="제목을 입력해주세요">
             </div>
-            <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="fieldError">Incorrect data</p>
-
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">내용</span>
-                </div>
-                <textarea class="form-control" aria-label="With textarea" th:field="*{content}"></textarea>
-            </div>
-            <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="fieldError">Incorrect data</p>
-
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">해시태그</span>
-                </div>
-                <input type="text" th:field="*{hashtag}" class="form-control" placeholder="해시태그를 입력해주세요">
-            </div>
-
-            <div th:if="${#strings.isEmpty(postFormDto.id)}" style="text-align: center">
-                <button th:formaction="@{/posts/new}" type="submit" class="btn btn-primary">저장</button>
-            </div>
-            <div th:unless="${#strings.isEmpty(postFormDto.id)}" style="text-align: center">
-                <button th:formaction="@{'/posts/' + ${postFormDto.id} }" type="submit" class="btn btn-primary">수정</button>
-            </div>
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-
-        </form>
-
+        </div>
     </div>
+</th:block>
 
-</div>
-</main>
-
-<footer th:replace="footer :: footer"></footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
 </html>
