--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,64 +1,81 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="don">
-    <title>게시판 페이지</title>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/layout/layout}">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="/css/search-bar.css" rel="stylesheet">
-</head>
+<th:block layout:fragment="content">
+    <div class="container-fluid">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">게시판</h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <form th:action="@{/posts/}" role="form" method="get" th:object="${posts}">
+                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <thead>
+                            <tr>
+                                <td>번호</td>
+                                <td>제목</td>
+                                <td>작성자</td>
+                                <td>등록일</td>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="post, status: ${posts.getContent()}">
+                                <td th:text="${post.id}"></td>
+                                <td>
+                                    <a th:href="'/posts/'+${post.id}" th:text="${post.title}"></a>
+                                </td>
+                                <td th:text="${post.memberName}"></td>
+                                <td th:text="${post.createdAt}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
 
-<body>
+                        <br/>
 
-<header th:replace="header :: header"></header>
+                        <div th:with="start=${(posts.number/maxPage)*maxPage + 1}, end=(${(posts.totalPages == 0) ? 1 : (start + (maxPage - 1) < posts.totalPages ? start + (maxPage - 1) : posts.totalPages)})" >
+                            <ul class="pagination justify-content-center">
 
-<main class="container">
+                                <li class="page-item" th:classappend="${posts.first}?'disabled'">
+                                    <a th:onclick="'javascript:page(' + ${posts.number - 1} + ')'" aria-label='Previous' class="page-link">
+                                        <span aria-hidden='true'>Previous</span>
+                                    </a>
+                                </li>
 
-    <form th:action="@{/posts/}" role="form" method="get" th:object="${posts}">
-        <table class="table text-center">
-            <thead>
-            <tr>
-                <td>번호</td>
-                <td>제목</td>
-                <td>작성자</td>
-                <td>등록일</td>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="post, status: ${posts.getContent()}">
-                <td th:text="${post.id}"></td>
-                <td>
-                    <a th:href="'/posts/'+${post.id}" th:text="${post.title}"></a>
-                </td>
-                <td th:text="${post.memberName}"></td>
-                <td th:text="${post.createdAt}"></td>
-            </tr>
-            </tbody>
-        </table>
+                                <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${posts.number eq page-1}?'active':''">
+                                    <a th:onclick="'javascript:page(' + ${page - 1} + ')'" th:inline="text" class="page-link">[[${page}]]</a>
+                                </li>
 
-        <br/><br/>
+                                <li class="page-item" th:classappend="${posts.last}?'disabled'">
+                                    <a th:onclick="'javascript:page(' + ${posts.number + 1} + ')'" aria-label='Next' class="page-link">
+                                        <span aria-hidden='true'>Next</span>
+                                    </a>
+                                </li>
 
-        <div class="form-inline justify-content-center" th:object="${postSearchDto}">
-            <select th:field="*{searchType}" class="form-control" style="width:auto;">
-                <option value="MEMBERNAME">작성자</option>
-                <option value="TITLE">제목</option>
-                <option value="HASHTAG">해시태그</option>
-            </select>
-            <input th:field="*{searchValue}" type="text" class="form-control" placeholder="검색어를 입력해주세요">
-            <button id="searchBtn" type="submit" class="btn btn-primary">검색</button>
+                            </ul>
+                        </div>
+
+                        <br/>
+
+                        <div class="form-inline justify-content-center" th:object="${postSearchDto}">
+                            <select th:field="*{searchType}" class="form-control" style="width:auto;">
+                                <option value="MEMBERNAME">작성자</option>
+                                <option value="TITLE">제목</option>
+                                <option value="HASHTAG">해시태그</option>
+                            </select>
+                            <input th:field="*{searchValue}" type="text" class="form-control" placeholder="검색어를 입력해주세요">
+                            <button id="searchBtn" type="submit" class="btn btn-primary">검색</button>
+                        </div>
+
+                        <a th:href="@{/posts/new}" class="btn btn-primary">글작성</a>
+
+                    </form>
+                </div>
+            </div>
         </div>
+    </div>
+</th:block>
 
-        <a th:href="@{/posts/new}" class="btn btn-primary">글작성</a>
-
-    </form>
-
-</main>
-
-<footer th:replace="footer :: footer"></footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
 </html>
