--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -2,25 +2,25 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <!-- 공통 헤드-->
-<th:block th:replace="/layout/fragments/head :: headFragment"></th:block>
+<th:block th:replace="layout/fragments/head :: headFragment"></th:block>
 
 <body id="page-top">
 <div id="wrapper">
 
-    <th:block th:replace="/layout/fragments/sidebar :: sidebarFragment"></th:block>
+    <th:block th:replace="layout/fragments/sidebar :: sidebarFragment"></th:block>
 
     <div id="content-wrapper" class="d-flex flex-column">
         <div id="content">
 
-            <th:block th:replace="/layout/fragments/top :: topbarFragment"></th:block>
+            <th:block th:replace="layout/fragments/top :: topbarFragment"></th:block>
 
             <th:block layout:fragment="content"></th:block>
         </div>
 
-        <th:block th:replace="/layout/fragments/footer :: footerFragment"></th:block>
+        <th:block th:replace="layout/fragments/footer :: footerFragment"></th:block>
     </div>
 </div>
 
-<th:block th:replace="/layout/fragments/script :: scriptFragment"></th:block>
+<th:block th:replace="layout/fragments/script :: scriptFragment"></th:block>
 </body>
 </html>
